--- a/EDS241_HW_template.Rmd
+++ b/EDS241_HW_template.Rmd
@@ -20,7 +20,7 @@ knitr::opts_chunk$set(fig.width = 4, fig.height = 3,
 
 # load packages
 packages=c("stargazer", "here", "tidyr", "dplyr","stringr", "janitor", 
-           "cowplot", "ggplot2", "tinytex", "datasets", "tibble")
+           "cowplot", "ggplot2", "tinytex", "datasets", "tibble", "kableExtra", "estimatr", "car", "broom")
 
 for (i in packages) {
   if (require(i,character.only=TRUE)==FALSE) {
@@ -32,12 +32,11 @@ for (i in packages) {
 }
 
 #devtools::install_github('rstudio/rmarkdown')
-options(scipen=999) # not scientific notation
+options(scipen=7) # not scientific notation
 
 
 ```
 
-\noindent In this mock assignment, we use the preloaded ``mtcars" data in R to investigate the relationship between vehicle miles per gallon (MPG), weight, and number of cylinders. The data was extracted from the 1974 Motor Trend US magazine, and comprises fuel consumption and 10 aspects of automobile design and performance for 32 automobiles (1973--74 models).
 
 # Clean and plot data
 
@@ -58,146 +57,125 @@ data1 <- read_excel("CES4.xlsx", sheet = 1, na = "NA") %>%
          poverty) %>% 
   drop_na(low_birth_weight)
 
-
-
-# Clean data
-
-## Add model names as a column 
-## [this is just an example manipulation, I rarely assign rownames to a column]
-
-#clean_data <- tibble::rownames_to_column(raw_data, "model")
-
-
 ```
 
-### (a) What is the average concentration of PM2.5 across all census tracts in California?
+# Homework Questions 
+
+
+## What is the average concentration of PM2.5 across all census tracts in California?
 
 \noindent The average concentration of PM2.5 across all census tracts in California is `r round(mean(data1$pm2_5))`
 
-###(b) What county has the highest level of poverty in California?
+## What county has the highest level of poverty in California?
 
-\noindent The country with the highest level of poverty in California is Ventura, and when looking at the avergae across
+\noindent The country with the highest level of poverty in California is Ventura, and when looking at the average across all data points within the data set you can see that Tulare has the highest level of poverty.
 
 ```{r}
-data1 <- group_by()
+average_pov <- data1 %>% 
+  group_by(california_county) %>% 
+  summarise(mean(poverty))
 ```
 
+\newpage
 
-###(c) Make a histogram depicting the distribution of percent low birth weight and PM2.5.
+## Make a histogram depicting the distribution of percent low birth weight and PM2.5.
+
+Histogram for PM2.5
 
 ```{r}
 #Histogram for PM2.5
 
 ggplot(data = data1, aes(x = pm2_5)) +
-  geom_histogram(aes(x = pm2_5))
+  geom_histogram() +
+  theme_cowplot(14) +
+  labs(x = "Low Birth Weight Percentage", 
+       y = "Count")
 
 ```
 
+Histogram for Low Birth Weight
 ```{r}
 #Histogram for Low Birth Weight
 
 ggplot(data = data1, aes(x = low_birth_weight)) +
-  geom_histogram(aes(x = low_birth_weight))
+  geom_histogram() +
+  theme_cowplot(14) +
+  labs(x = "PM 2.5", 
+       y = "Count")
 
 ```
 
 
-###(d) Estimate a OLS regression of LowBirthWeight on PM25. Report the estimated slope
+## Estimate a OLS regression of LowBirthWeight on PM25. Report the estimated slope
 coefficient and its heteroskedasticity-robust standard error. Interpret the estimated slope
 coefficient. Is the effect of PM25 on LowBirthWeight statistically significant at the 5%?
 
+
 ```{r}
-lm_robust(low_birth_weight ~ pm2_5, data = data1)
+pm_lbw <- lm_robust(formula = low_birth_weight ~ pm2_5, data = data1)
+
+tidy_pm_lbw <- broom::tidy(pm_lbw)
+
+tidy_pm_lbw %>%
+  dplyr::filter(term != '(Intercept)') %>% 
+  dplyr::select(term, estimate, std.error, p.value) %>% 
+  knitr::kable() %>% 
+  kableExtra::kable_styling(full_width = FALSE, 
+                latex_options = "HOLD_position")
+
 ```
 
+\noindent The estimated slope coefficient is saying the for every one unit increase in PM2.5 you will have a 0.118 increase in the percentage of low birth weights. We can say that the effect of PM25 on LowBirthWeight statistically significant at the 5% level by looking at both the p-value. 
 
 
-###(e) Suppose a new air quality policy is expected to reduce PM2.5 concentration by 2
+## Suppose a new air quality policy is expected to reduce PM2.5 concentration by 2
 micrograms per cubic meters. Predict the new average value of LowBirthWeight and
 derive its 95% confidence interval. Interpret the 95% confidence interval.
 
-###(f) Add the variable Poverty as an explanatory variable to the regression in (d). Interpret theestimated coefficient on Poverty. What happens to the estimated coefficient on PM25,
+**This question has been pushed to the next homework assignment**
+
+## Add the variable Poverty as an explanatory variable to the regression in (d). Interpret the estimated coefficient on Poverty. What happens to the estimated coefficient on PM25,
 compared to the regression in (d). Explain.
 
-###(g) From the regression in (f), test the null hypothesis that the effect of PM2.5 is equal to the effect of Poverty
+```{r}
+pm_lbw_p <- estimatr::lm_robust(low_birth_weight ~ pm2_5 + poverty, data = data1)
+pm_lbw_p
+
+tidy_pm_lbw_p <- broom::tidy(pm_lbw_p)
+
+tidy_pm_lbw_p %>%
+  dplyr::filter(term != '(Intercept)') %>% 
+  dplyr::select(term, estimate, std.error, p.value) %>% 
+  knitr::kable() %>% 
+  kableExtra::kable_styling(full_width = FALSE, 
+                latex_options = "HOLD_position")
+```
+
+The estimated slope coefficient is saying the for every one unit increase in poverty you will have a 0.027 increase in the percentage of low birth weights, while holding the PM2.5 levels constant. When looking at the slope coefficient of PM 2.5 we can see that it has lowered from 0.118 to 0.027. The slope is lower as now we are allowing poverty and pm 2.5 to both have an effect on low birth weights. Before only pm 2.5 was being modeled and seeming to account for the majority of the variation.  
 
 
 
+## From the regression in (f), test the null hypothesis that the effect of PM2.5 is equal to the effect of Poverty
 
+```{r}
+lhm <- linearHypothesis(model = pm_lbw_p, c("pm2_5=poverty"))
+lhm
 
+tidy_lhm <- broom::tidy(lhm) %>% 
+  dplyr::select(statistic, p.value) %>% 
+  dplyr::filter(statistic > 0) %>% 
+  dplyr::rename(chisq = statistic) %>% 
+  knitr::kable() %>% 
+  kableExtra::kable_styling(full_width = FALSE, 
+                latex_options = "HOLD_position")
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-\noindent The code chunk below shows how to produce a scatter plot of MPG against weight.  
-
-```{r , include=TRUE}
-
-# Plot 1
-
-plot_1 <- ggplot(clean_data, aes(y=mpg, x = wt))+
-  geom_point()+
-  theme_cowplot(14)+
-  labs(x = "Weight (1000 lbs)", y = "Miles per gallon")
+tidy_lhm
 
 ```
 
-\newpage
-<center>**Figure 1: MPG and vehicle weight**</center>
-```{r , fig.width = 4, fig.height = 3, eval=TRUE, echo=FALSE}
-plot_1
-```
+With this model we can reject the null hypothesis stating that the effects of poverty are the same as the effects of PM2.5 on low birth weights.
 
-\noindent Figure 1 shows the expected negative relationship between vehicle weight and MPG.
 
-# Run and interpret regression models
 
-\noindent In order to more formally analyze the relationship between MPG, vehicle weight, and cylinders we estimate the following regression: 
 
-\begin{align}
-  Y_{i} = \beta_0 + \beta_1 X_{1i} + \beta_2 X_{2i} + u_{i}
-\end{align}
 
-\noindent where $Y_{i}$ is MPG for vehicle model $i$, $X_{1i}$ is the vehicle weight, $X_{2i}$ is the number of cylinders in the engine, and $u_{i}$ the regression error term. We will consider a regression including only vehicle weight, and a regression including vehicle weight and number of cylinders.
-
-\medskip
-
-\noindent In R, we run the following code: 
-
-```{r , include=TRUE}
-
-model_1 <- lm(mpg ~ wt, data=clean_data)
-model_2 <- lm(mpg ~ wt + cyl, data=clean_data)
-
-```
-
-\noindent Table 1 shows the estimated coeffients from estimating equation (1). 
-
-```{r , results = 'asis', echo = FALSE}
-stargazer(model_1, model_2, type = "latex", ci=FALSE, no.space = TRUE, 
-          header = FALSE, omit = c("Constant"), omit.stat = c("adj.rsq","ser", "f"),
-          covariate.labels = c("Weight (1000 lbs)", "Cylinders"), dep.var.labels = c("MPG"),
-          dep.var.caption = c(""),
-          title = "MPG and vehicle weight", table.placement = "H")
-
-```
-
-\noindent In model (1), the estimated $\beta_{1}$ coefficient implies that a 1000 pound increase in vehicle weight reduces miles per gallon by 5.3 miles. Adding the number of cylinders in model (2) reduces $\hat{\beta_{1}}$ from -5.3 to -3.2.
